increase spacing between automated checks and tab stops sections

--- a/src/reports/components/report-sections/passed-checks-section.scss
+++ b/src/reports/components/report-sections/passed-checks-section.scss
@@ -1,7 +1,7 @@
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 .passed-checks-container {
-    padding-bottom: 24px;
+    padding-bottom: 58px;
 
     :global {
         .title-container[aria-level='2'] {
